--- a/_config.yml
+++ b/_config.yml
@@ -39,6 +39,22 @@ keywords:              []
 # It also used by the `jekyll-seo-tag` plugin.
 logo:                  /assets/img/F2.jpg
 
+.avatar {
+  // <<< inline
+  width: 14rem;
+  height: 14rem;
+  border-radius: 100%;
+  overflow: hidden;
+  display: inline-block;
+  img { width: 100%; }
+  // >>>
+
+  // <<< link
+  position: relative;
+  z-index: 1;
+  // >>>
+}
+
 favicon: /assets/icons/favicon1.ico
 apple_touch_icon: /assets/icons/icon1-192x192.png
 
