--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ menu:
   - title:             EDUCATION
     url:               /education/
   - title:             <a href="/assets/Dr. Filip Mandys - CV.pdf" download="">DOWNLOAD CV</a>
-    url:               /cv/
+#    url:              /cv/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
@@ -136,14 +136,7 @@ defaults:
   - scope:
       path:            assets/
     values:
-      sitemap:         false
-
-  # Don't include licenses in sitemap (feel free to delete)
-  - scope:
-      path:            licenses/
-    values:
-      layout:          plain
-      sitemap:         false
+      sitemap:         true
 
   # # You can use the following to enable comments on all posts.
   # - scope:
