--- a/_config.yml
+++ b/_config.yml
@@ -54,10 +54,10 @@ author:
 menu:
   - title:             EXPERIENCE
     url:               /experience/
-  - title:             PUBLISHED RESEARCH
+  - title:             PUBLICATIONS
     url:               /publications/
   - title:             WORKING PAPERS
-    url:               /workpapers/
+    url:               /workingpapers/
   - title:             CONFERENCES
     url:               /conferences/
   - title:             MEDIA
