--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description:           >
 
 
 # A shorter description for the sidebar.
-tagline:               Research Associate <br> University of Cambridge <br> Senior Researcher - Research Institute for Labour and Social Affairs (RILSA)
+tagline:               Research Associate - University of Cambridge <br> Senior Researcher - Research Institute for Labour and Social Affairs (RILSA)
 
 # A list of keywords for your blog
 keywords:              [Mandys, Filip, Research, Economics]
