--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ description:           >
 
 
 # A shorter description for the sidebar.
-tagline:               Research Associate <br> University of Cambridge
+tagline:               Research Associate - Cambridge University <br> Senior Researcher - RILSA
 
 # A list of keywords for your blog
 keywords:              [Mandys, Filip, Research, Economics]
